<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_textview">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">WOLOX</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="page_1_title">Username: %1$s</string>
    <string name="page_1_toolbar_title">Random number example</string>
    <string name="page_2_title">Page 2</string>
    <string name="page_2_toolbar_title">Example Request</string>
    <string name="fragment_example_username">Username</string>
    <string name="fragment_example_login">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Log In</string>
    <string name="signup_button">Sign Up</string>
    <string name="login_terms_and_conditions">By joining you agree to our <a href="https://www.wolox.com.ar/"><![CDATA[Terms & Conditions]]></a></string>
    <string name="saved_user_email_key">logged_user</string>
    <string name="saved_user_email_default_key">default</string>
    <string name="home_title_label">Home Page</string>
    <string name="home_information_text">Click on log out to return to the log in page</string>
    <string name="home_log_out_button">Log Out</string>
    <string name="invalid_email_error">Email or password is incorrect</string>
    <string name="connection_error">There was a problem with the connection</string>
    <string name="news_load_failed">There are no news to be loaded</string>
    <string name="news_load_success">News load successfull</string>
    <string name="news_details_post_title">Post</string>

</resources>